--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-git+https://github.com/Rapptz/discord.py@master
+discord.py
 google-re2>=0.2.20210901,<0.3
+git+https://github.com/LyricLy/parse-discord@master
